# nav2_ws

./: .gitignore  README.md  run_goal_patience_experiment.sh  run_simple_room_baseline.sh
nav2_lab_behaviors/: CMakeLists.txt  nav2_lab_behaviors.xml  package.xml
nav2_lab_behaviors/include/nav2_lab_behaviors/plugins/: observe_spin.hpp
nav2_lab_behaviors/plugins/: observe_spin.cpp
nav2_lab_bringup/: CMakeLists.txt  package.xml
nav2_lab_bringup/behavior_trees/: nav2_lab_all_plugins.xml  nav2_lab_goal_patience.xml  nav2_lab_goal_patience_aggressive.xml  nav2_lab_recovery.xml  nav2_lab_straight_line.xml
nav2_lab_bringup/launch/: explore.launch.py  lab.launch.py  mapping.launch.py  navigation.launch.py  sim.launch.py  slam.launch.py
nav2_lab_bringup/maps/: narrow_corridor.pgm  narrow_corridor.yaml  real.pgm  real.yaml  simple_room.pgm  simple_room.yaml
nav2_lab_bringup/params/: nav2_params.yaml
nav2_lab_bringup/rviz/: nav2_lab.rviz
nav2_lab_bringup/test/: test_plugin_selection.py
nav2_lab_costmaps/: CMakeLists.txt  nav2_lab_costmaps.xml  package.xml
nav2_lab_costmaps/include/nav2_lab_costmaps/: marker_layer.hpp
nav2_lab_costmaps/plugins/: marker_layer.cpp
nav2_lab_explorer/: package.xml  setup.cfg  setup.py
nav2_lab_explorer/nav2_lab_explorer/: __init__.py  explore_runner.py
nav2_lab_explorer/resource/: nav2_lab_explorer
nav2_lab_missions/: package.xml  setup.cfg  setup.py
nav2_lab_missions/baselines/: simple_room.yaml
nav2_lab_missions/config/: goal_patience_mission.yaml  real_world_mission.yaml  simple_room_mission.yaml
nav2_lab_missions/nav2_lab_missions/: __init__.py  explore_runner.py  mission_logger.py  mission_runner.py  mission_stats.py
nav2_lab_missions/resource/: nav2_lab_missions
nav2_lab_missions/test/: __init__.py  test_mission_configs.py  test_mission_stats.py
nav2_lab_planners/: CMakeLists.txt  nav2_lab_planners.xml  package.xml
nav2_lab_planners/include/nav2_lab_planners/: straight_line_planner.hpp
nav2_lab_planners/plugins/: straight_line_planner.cpp
nav2_lab_worlds/: CMakeLists.txt  package.xml
nav2_lab_worlds/worlds/: goal_patience.world  narrow_corridor.world  real.world  simple_room.world
