<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_lab_bringup</name>
  <version>0.1.0</version>
  <description>Bringup package for the Nav2 simulation lab.</description>
  <maintainer email="user@example.com">nav2_lab</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_lab_behaviors</exec_depend>
  <exec_depend>nav2_lab_planners</exec_depend>
  <exec_depend>nav2_lab_costmaps</exec_depend>
  <exec_depend>nav2_lab_explorer</exec_depend>
  <exec_depend>nav2_lab_worlds</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
